Changelog for Writer2xhtml version 1.6.1 -> 1.7.1

All changes are classified as
- New feature: New functionality has been added to the extension
- Improved: A feature was changed to work better than in the previous version
- Bugfix: A bug in the previous version was fixed
- Changed: Something has changed due to a design decision

---------- version 1.7.1 ----------

- Improved: Panels now include all indexes (previously only table of contents and alphabetical index)

- Improved: Panels now include footnote and endnote pages. Title is either automatic based on the document language
  or taken from the options footnotes_heading and endnotes_heading

- Bugfix: Now only includes header or footer if the corresponding id in template_ids is non-empty

- Bugfix: Now always uses the first global table of contents for the navigation bars

- New feature: Added support for rotated text, letter spacing and hyphenation

- Improved: Extended support for text decoration (underline, strike through and overline) and removed support for
  blinking text (deprecated in CSS)

- Improvement: Calculation of list indentations and label widths are now correct also in these two cases:
  (1) The list style is attached to a paragraph style.
  (2) Hard paragraph formatting is applied to the list items.

---------- version 1.7 ----------

- Changed: Removed old experimental code to export presentations to HTML

- Improved: Export of list formatting is now using modern CSS features like counters.

- Changed: The option list_formatting now supports the values ignore_all (do not export list formatting),
  convert_labels (only convert the labels, not indentations), convert_all (convert all list formatting).
  The old values css1, css1_hack and hard_labels have been removed.  

- Bugfix: Fix crash in Calc export when last row/column in view is hidden

- Improved: No longer uses deprecated Java constructions

- Improved: Pretty printing now works better with spreadsheets.
